--- a/ci/assets/v1.15-stacked/cluster/requirements.txt
+++ b/ci/assets/v1.15-stacked/cluster/requirements.txt
@@ -1,11 +1,12 @@
 adal==1.2.1
-ansible==2.7.14
+ansible==2.9.1
 asn1crypto==0.24.0
+attrs==19.3.0
 awscli==1.16.174
 bcrypt==3.1.7
 boto==2.49.0
-boto3==1.9.164
-botocore==1.12.164
+boto3==1.10.28
+botocore==1.13.28
 cachetools==3.1.1
 certifi==2019.3.9
 cffi==1.13.2
@@ -16,18 +17,22 @@ dictdiffer==0.8.0
 docutils==0.14
 google-auth==1.6.3
 idna==2.8
+importlib-metadata==1.1.0
 Jinja2==2.10.3
 jmespath==0.9.4
-kubernetes==8.0.1
+jsonschema==3.2.0
+kubernetes==10.0.1
 MarkupSafe==1.1.1
+more-itertools==8.0.0
 oauthlib==3.0.1
-openshift==0.8.9
+openshift==0.10.0
 paramiko==2.6.0
 pyasn1==0.4.5
 pyasn1-modules==0.2.5
 pycparser==2.19
 PyJWT==1.7.1
 PyNaCl==1.3.0
+pyrsistent==0.15.6
 python-dateutil==2.8.0
 python-string-utils==0.6.0
 PyYAML==5.1.2
@@ -39,3 +44,4 @@ s3transfer==0.2.1
 six==1.12.0
 urllib3==1.24.3
 websocket-client==0.56.0
+zipp==0.6.0
