--- a/stack/ansible/keights-system/tasks/main.yml
+++ b/stack/ansible/keights-system/tasks/main.yml
@@ -146,8 +146,8 @@
     kind: Pod
     namespace: kube-system
     label_selectors:
-    - k8s-app in (calico-node, calico-typha, kube-router)
+    - k8s-app in (calico-node, calico-typha, calico-kube-controllers, kube-dns, kube-router)
   register: pods
-  until: pods | json_query('resources[].status.containerStatuses[].state | map(&keys(@)[?@ != `running`], @)[]') == []
+  until: pods | json_query('resources[].status.containerStatuses[] | [?ready==`false`]') == []
   retries: 60
   delay: 10
