Remove running of iptables in legacy mode in AMI
See https://github.com/kubernetes/kubernetes/pull/82966.

--- a/stack/ami/debian/playbook.yml
+++ b/stack/ami/debian/playbook.yml
@@ -187,8 +187,7 @@
         apt-get clean && \
         systemctl disable kubelet.service && \
         systemctl disable apt-daily.timer && \
-        systemctl disable apt-daily-upgrade.timer && \
-        update-alternatives --set iptables /usr/sbin/iptables-legacy
+        systemctl disable apt-daily-upgrade.timer
         EOF
       args:
         creates: /mnt/usr/bin/keights
