--- a/keights/resources/usr/share/keights/kubeadm-init-config.yaml.template
+++ b/keights/resources/usr/share/keights/kubeadm-init-config.yaml.template
@@ -102,6 +102,7 @@ authentication:
     enabled: true
   x509:
     clientCAFile: /etc/kubernetes/pki/ca.crt
+cgroupDriver: systemd
 clusterDNS:
 - {{ .ClusterDNS }}
 clusterDomain: {{ .ClusterDomain }}
