--- a/stack/cloudformation/etcd.yml
+++ b/stack/cloudformation/etcd.yml
@@ -91,7 +91,8 @@ Parameters:
         "ip-masq": false,
         "iptables": false,
         "log-driver": "journald",
-        "storage-driver": "overlay2"
+        "storage-driver": "overlay2",
+        "exec-opts": ["native.cgroupdriver=systemd"]
       }
 
 Conditions:
