--- a/keights/resources/usr/lib/systemd/system/keights-templatize-kubeadm-join-config.service
+++ b/keights/resources/usr/lib/systemd/system/keights-templatize-kubeadm-join-config.service
@@ -10,6 +10,7 @@ Type=oneshot
 # Environment=KEIGHTS_APISERVER_PORT=
 # Environment=KEIGHTS_IMAGE_REPOSITORY=
 # Environment=KEIGHTS_NODE_LABELS=
+# Environment=KEIGHTS_NODE_TAINTS=
 Environment=KEIGHTS_KUBEADM_JOIN_CONFIG_TEMPLATE=/usr/share/keights/kubeadm-join-config.yaml.template
 ExecStart=/bin/sh -c ' \
     while true; do \
@@ -34,5 +35,6 @@ ExecStart=/bin/sh -c ' \
       -v CACertHash=$${ca_cert_hash} \
       -v ImageRepository=${KEIGHTS_IMAGE_REPOSITORY} \
       -v NodeLabels=${KEIGHTS_NODE_LABELS} \
+      -v NodeTaints=${KEIGHTS_NODE_TAINTS} \
       -v NodeName=$${node_name} \
 '
