--- a/ci/pipelines/keights.yml
+++ b/ci/pipelines/keights.yml
@@ -2,7 +2,8 @@ resource_types:
 - name: pull-request
   type: docker-image
   source:
-    repository: jtarchie/pr
+    repository: teliaoss/github-pr-resource
+    tag: v0.21.0
 
 resources:
 - name: version-snap
@@ -19,11 +20,9 @@ resources:
   webhook_token: ((github-keights-webhook-token))
   source:
     access_token: ((github-access-token))
-    private_key: ((github-deploy-key-keights))
-    base: ((git-branch))
-    repo: cloudboss/keights
-    require_review_approval: true
-    only_mergeable: true
+    base_branch: ((git-branch))
+    repository: cloudboss/keights
+    required_review_approvals: 1
 - name: keights-release
   type: git
   check_every: 12h
