Allow to skip kube-proxy addon for `kubeadm init`
This makes it so that when `keights_stack.enable_kube_proxy` is `false`,
`kubeadm` will receive the argument `--skip-phases=addon/kube-proxy`. Along with
this, `keights_system.network.replace_kube_proxy` may be set to `true`, if using
kube-router, to enable it to act in place of kube-proxy.

--- a/keights/resources/usr/lib/systemd/system/keights-kubeadm-init-stacked.service
+++ b/keights/resources/usr/lib/systemd/system/keights-kubeadm-init-stacked.service
@@ -7,11 +7,12 @@ ConditionPathExists=!/var/lib/kubeadm/initialized
 
 [Service]
 Type=simple
+# Environment=KEIGHTS_KUBEADM_INIT_SKIP_PHASES=
 ExecStart=/bin/sh -c ' \
     /usr/bin/kubeadm init \
       --config=/var/lib/kubeadm/config.yaml \
       --ignore-preflight-errors=all \
-      --skip-token-print && \
+      --skip-token-print ${KEIGHTS_KUBEADM_INIT_SKIP_PHASES} && \
     touch /var/lib/kubeadm/initialized \
 '
 Restart=on-failure
