--- a/stack/cloudformation/master-stacked.yml
+++ b/stack/cloudformation/master-stacked.yml
@@ -148,10 +148,15 @@ Parameters:
       Template for kubeadm init config file.
     Type: String
     Default: ''
+  EnableKubeProxy:
+    Description: Whether or not kube-proxy should be enabled.
+    Type: String
+    Default: 'true'
 
 Conditions:
   HasThreeMasters: !Equals [!Ref NumInstances, 3]
   HasKubeadmInitConfigTemplate: !Not [!Equals [!Ref KubeadmInitConfigTemplate, '']]
+  HasKubeProxy: !Equals [!Ref EnableKubeProxy, 'true']
 
 Resources:
   SubnetToAzFunction:
@@ -392,6 +397,13 @@ Resources:
                   Environment=AWS_REGION=${AWS::Region}
                   Environment=KEIGHTS_CLUSTER_NAME=${ClusterName}
 
+              - path: /etc/systemd/system/keights-kubeadm-init-stacked.service.d/environment.conf
+                owner: root:root
+                permissions: '0644'
+                content: |
+                  [Service]
+                  Environment=KEIGHTS_KUBEADM_INIT_SKIP_PHASES=${KubeadmInitSkipPhases}
+
               - path: /etc/systemd/system/keights-templatize-kubeadm-init-config.service.d/environment.conf
                 owner: root:root
                 permissions: '0644'
@@ -437,6 +449,10 @@ Resources:
                 - HasKubeadmInitConfigTemplate
                 - !Ref KubeadmInitConfigTemplate
                 - '""'
+              KubeadmInitSkipPhases: !If
+                - HasKubeProxy
+                - ''
+                - --skip-phases=addon/kube-proxy
 
 Outputs:
   LoadBalancerDnsName:
