--- a/ci/tasks/run-e2e.yml
+++ b/ci/tasks/run-e2e.yml
@@ -15,11 +15,10 @@ outputs:
 - name: artifacts-out
 
 params:
-  SONOBUOY_URL: https://github.com/vmware-tanzu/sonobuoy/releases/download/v0.18.0/sonobuoy_0.18.0_linux_amd64.tar.gz
-  KUBECTL_URL: https://storage.googleapis.com/kubernetes-release/release/v1.18.0/bin/linux/amd64/kubectl
+  SONOBUOY_URL: https://github.com/vmware-tanzu/sonobuoy/releases/download/v0.19.0/sonobuoy_0.19.0_linux_amd64.tar.gz
+  KUBECTL_URL: https://storage.googleapis.com/kubernetes-release/release/v1.19.0/bin/linux/amd64/kubectl
   KUBECONFIG: artifacts-in/kubeconfig
   CNI_PLUGIN_DAEMONSET: kube-router
-  KUBE_CONFORMANCE_IMAGE_VERSION: v1.18.6
 
 run:
   path: /bin/sh
@@ -51,10 +50,7 @@ run:
 
     echo "Running sonobuoy `sonobuoy version --short`"
 
-    sonobuoy run \
-        --wait=180 \
-        --mode=certified-conformance \
-        --kube-conformance-image-version=${KUBE_CONFORMANCE_IMAGE_VERSION}
+    sonobuoy run --wait=180 --mode=certified-conformance
 
     echo -n 'Checking e2e results...'
     results=`sonobuoy retrieve artifacts-out`
