Add /bin/sh and dependencies to controller-manager

--- a/keights/resources/usr/share/keights/kubeadm-init-config.yaml.template
+++ b/keights/resources/usr/share/keights/kubeadm-init-config.yaml.template
@@ -38,6 +38,22 @@ controllerManager:
     configure-cloud-routes: "false"
     flex-volume-plugin-dir: /var/lib/kubelet/plugins/volume/exec
     allocate-node-cidrs: "{{ .AllocateNodeCIDRs }}"
+  extraVolumes:
+  - name: bin-sh
+    hostPath: /bin/sh
+    mountPath: /bin/sh
+    readOnly: true
+    pathType: File
+  - name: libc-so-6
+    hostPath: /lib/x86_64-linux-gnu/libc.so.6
+    mountPath: /lib/x86_64-linux-gnu/libc.so.6
+    readOnly: true
+    pathType: File
+  - name: ld-linux-so-2
+    hostPath: /lib64/ld-linux-x86-64.so.2
+    mountPath: /lib64/ld-linux-x86-64.so.2
+    readOnly: true
+    pathType: File
 dns:
   type: CoreDNS
 {{- if eq .EtcdMode "stacked" }}
