--- a/ci/assets/v1.18-stacked/cluster/requirements.txt
+++ b/ci/assets/v1.18-stacked/cluster/requirements.txt
@@ -1,46 +1,38 @@
-adal==1.2.4
-ansible==2.9.12
-asn1crypto==1.4.0
-attrs==20.1.0
-awscli==1.18.128
-bcrypt==3.2.0
+ansible==2.10.3
+ansible-base==2.10.3
+awscli==1.18.179
 boto==2.49.0
-boto3==1.14.51
-botocore==1.17.51
+boto3==1.16.19
+botocore==1.19.19
 cachetools==4.1.1
-certifi==2020.6.20
-cffi==1.14.2
+certifi==2020.11.8
+cffi==1.14.3
 chardet==3.0.4
 colorama==0.4.3
-cryptography==3.1
-dictdiffer==0.8.1
+cryptography==3.2.1
 docutils==0.15.2
-google-auth==1.21.0
-idna==2.8
-importlib-metadata==1.7.0
+google-auth==1.23.0
+idna==2.10
 Jinja2==2.11.2
 jmespath==0.10.0
-jsonschema==3.2.0
 kubernetes==11.0.0
 MarkupSafe==1.1.1
-more-itertools==8.5.0
 oauthlib==3.1.0
 openshift==0.11.2
+packaging==20.4
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.20
-PyJWT==1.7.1
-pyrsistent==0.16.0
+pyparsing==2.4.7
 python-dateutil==2.8.1
 python-string-utils==1.0.0
 PyYAML==5.3.1
-requests==2.24.0
+requests==2.25.0
 requests-oauthlib==1.3.0
 rsa==4.5
-ruamel.yaml==0.16.10
-ruamel.yaml.clib==0.2.0
+ruamel.yaml==0.16.12
+ruamel.yaml.clib==0.2.2
 s3transfer==0.3.3
 six==1.15.0
-urllib3==1.25.10
+urllib3==1.26.2
 websocket-client==0.57.0
-zipp==3.1.0
