--- a/ci/assets/v1.20-external/cluster/playbook.yml
+++ b/ci/assets/v1.20-external/cluster/playbook.yml
@@ -14,14 +14,21 @@
       node_port_access_cidr: '{{ node_port_access_cidr }}'
       keights_version: '{{ keights_version }}'
       resource_bucket: '{{ resource_bucket }}'
+      etcd_mode: external
+      etcd:
+        subnet_ids: '{{ subnet_ids }}'
+        instance_type: '{{ etcd_instance_type }}'
+        docker_options: '{{ docker_options }}'
+        keypair: '{{ keypair }}'
+        volume_size: '{{ etcd_volume_size }}'
       masters:
         service_cidr: '{{ service_cidr }}'
+        num_instances: '{{ num_master_instances }}'
         pod_cidr: '{{ pod_cidr }}'
         subnet_ids: '{{ subnet_ids }}'
         instance_type: '{{ master_instance_type }}'
         keypair: '{{ keypair }}'
         load_balancer_scheme: '{{ load_balancer_scheme }}'
-        etcd_volume_size: '{{ etcd_volume_size }}'
         docker_options: '{{ docker_options }}'
       node_groups: '{{ node_groups }}'
 
@@ -32,5 +39,5 @@
       network:
         plugin: kube-router
         # Let the masters act as route reflectors for CI clusters
-        rr_node_label: node-role.kubernetes.io/master
+        rr_node_label: node-role.kubernetes.io/control-plane
     when: 'state == "present"'
