--- a/ci/pipelines/keights.yml
+++ b/ci/pipelines/keights.yml
@@ -2,7 +2,7 @@ resource_types:
 - name: pull-request
   type: docker-image
   source:
-    repository: teliaoss/github-pr-resource
+    repository: cloudboss.jfrog.io/containers/teliaoss/github-pr-resource
     tag: v0.21.0
 
 resources:
