--- a/ci/tasks/s3-upload.yml
+++ b/ci/tasks/s3-upload.yml
@@ -4,7 +4,7 @@ platform: linux
 image_resource:
   type: docker-image
   source:
-    repository: python
+    repository: cloudboss.jfrog.io/containers/python
     tag: '3.7.2-alpine'
 
 inputs:
