--- a/ci/tasks/verify-release.yml
+++ b/ci/tasks/verify-release.yml
@@ -4,7 +4,7 @@ platform: linux
 image_resource:
   type: docker-image
   source:
-    repository: alpine/git
+    repository: cloudboss.jfrog.io/containers/alpine/git
     tag: '1.0.4'
 
 inputs:
