--- a/ci/tasks/make-keights.yml
+++ b/ci/tasks/make-keights.yml
@@ -4,7 +4,7 @@ platform: linux
 image_resource:
   type: docker-image
   source:
-    repository: golang
+    repository: cloudboss.jfrog.io/containers/golang
     tag: '1.13.3'
 
 inputs:
