--- a/stack/ami/requirements.txt
+++ b/stack/ami/requirements.txt
@@ -1,11 +1,16 @@
-ansible==2.7.18
+ansible==2.10.7
+ansible-base==2.10.6
+asn1crypto==1.4.0
 bcrypt==3.2.0
-cffi==1.14.3
-cryptography==3.2.1
-Jinja2==2.11.2
+cffi==1.14.5
+cryptography==3.4.6
+Jinja2==2.11.3
 MarkupSafe==1.1.1
+packaging==20.9
 paramiko==2.7.2
+pyasn1==0.4.8
 pycparser==2.20
 PyNaCl==1.4.0
-PyYAML==5.3.1
+pyparsing==2.4.7
+PyYAML==5.4.1
 six==1.15.0
