--- a/ci/assets/v1.18-external/cluster/requirements.txt
+++ b/ci/assets/v1.18-external/cluster/requirements.txt
@@ -1,47 +1,38 @@
-adal==1.2.1
-ansible==2.9.2
-asn1crypto==0.24.0
-attrs==19.3.0
-awscli==1.16.174
-bcrypt==3.1.7
+ansible==2.10.7
+ansible-base==2.10.6
+awscli==1.19.12
 boto==2.49.0
-boto3==1.10.28
-botocore==1.13.28
-cachetools==3.1.1
-certifi==2019.3.9
-cffi==1.13.2
-chardet==3.0.4
-colorama==0.3.9
-cryptography==2.8
-dictdiffer==0.8.0
-docutils==0.14
-google-auth==1.6.3
-idna==2.8
-importlib-metadata==1.1.0
-Jinja2==2.10.3
-jmespath==0.9.4
-jsonschema==3.2.0
-kubernetes==10.0.1
+boto3==1.17.12
+botocore==1.20.12
+cachetools==4.2.1
+certifi==2020.12.5
+cffi==1.14.5
+chardet==4.0.0
+colorama==0.4.3
+cryptography==3.4.6
+docutils==0.15.2
+google-auth==1.27.0
+idna==2.10
+Jinja2==2.11.3
+jmespath==0.10.0
+kubernetes==11.0.0
 MarkupSafe==1.1.1
-more-itertools==8.0.0
-oauthlib==3.0.1
-openshift==0.10.0
-paramiko==2.6.0
-pyasn1==0.4.5
-pyasn1-modules==0.2.5
-pycparser==2.19
-PyJWT==1.7.1
-PyNaCl==1.3.0
-pyrsistent==0.15.6
-python-dateutil==2.8.0
-python-string-utils==0.6.0
-PyYAML==5.1.2
-requests==2.22.0
-requests-oauthlib==1.2.0
-rsa==3.4.2
-ruamel.yaml==0.15.97
-s3transfer==0.2.1
-six==1.12.0
-urllib3==1.24.3
-websocket-client==0.56.0
-zipp==0.6.0
+oauthlib==3.1.0
+openshift==0.11.2
+packaging==20.9
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.20
+pyparsing==2.4.7
+python-dateutil==2.8.1
+python-string-utils==1.0.0
+PyYAML==5.4.1
+requests==2.25.1
+requests-oauthlib==1.3.0
+rsa==4.5
+ruamel.yaml==0.16.12
+ruamel.yaml.clib==0.2.2
+s3transfer==0.3.4
+six==1.15.0
+urllib3==1.26.3
+websocket-client==0.57.0
