--- a/stack/ami/requirements.txt
+++ b/stack/ami/requirements.txt
@@ -1,13 +1,16 @@
-ansible==2.7.16
-asn1crypto==0.24.0
-bcrypt==3.1.6
-cffi==1.12.3
-cryptography==2.7
-Jinja2==2.10.1
+ansible==2.10.7
+ansible-base==2.10.6
+asn1crypto==1.4.0
+bcrypt==3.2.0
+cffi==1.14.5
+cryptography==3.4.6
+Jinja2==2.11.3
 MarkupSafe==1.1.1
-paramiko==2.4.2
-pyasn1==0.4.5
-pycparser==2.19
-PyNaCl==1.3.0
-PyYAML==5.1.1
-six==1.12.0
+packaging==20.9
+paramiko==2.7.2
+pyasn1==0.4.8
+pycparser==2.20
+PyNaCl==1.4.0
+pyparsing==2.4.7
+PyYAML==5.4.1
+six==1.15.0
