--- a/stack/ami/debian/playbook.yml
+++ b/stack/ami/debian/playbook.yml
@@ -183,6 +183,8 @@
           kubectl={{ k8s_version_no_v }}-00 \
           kubeadm={{ k8s_version_no_v }}-00 \
           kubelet={{ k8s_version_no_v }}-00 && \
+        grub-install --force /dev/{{ root_vol }} && \
+        update-grub && \
         dpkg -i /tmp/keights.deb && \
         apt-get clean && \
         systemctl disable kubelet.service && \
