Update kubeadm init config for v1.21
* The kubelet cgroup driver now defaults to systemd.

* Add extra argument to the apiserver for --service-account-jwks-uri. If it is
  not given, it is derived from the external hostname but the internal port.
  This causes a timeout when running e2e tests.

--- a/keights/resources/usr/share/keights/kubeadm-init-config.yaml.template
+++ b/keights/resources/usr/share/keights/kubeadm-init-config.yaml.template
@@ -27,6 +27,7 @@ apiServer:
     authorization-mode: Node,RBAC
     cloud-provider: aws
     external-hostname: {{ .APIServer }}
+    service-account-jwks-uri: https://kubernetes.default.svc.{{ .ClusterDomain }}/openid/v1/jwks
   timeoutForControlPlane: 4m0s
 apiVersion: kubeadm.k8s.io/v1beta2
 certificatesDir: /etc/kubernetes/pki
@@ -117,7 +118,6 @@ authentication:
     enabled: true
   x509:
     clientCAFile: /etc/kubernetes/pki/ca.crt
-cgroupDriver: systemd
 clusterDNS:
 - {{ .ClusterDNS }}
 clusterDomain: {{ .ClusterDomain }}
