--- a/stack/ansible/keights-system/tasks/main.yml
+++ b/stack/ansible/keights-system/tasks/main.yml
@@ -1,59 +1,59 @@
 ---
 - name: set keights version
-  set_fact:
+  ansible.builtin.set_fact:
     keights_version: '{{ item }}'
   with_file:
     - '{{ role_path }}/version'
 
 - name: set kubernetes version
-  set_fact:
+  ansible.builtin.set_fact:
     k8s_version: '{{ keights_system.k8s_version | default(keights_version.split("-")[0]) }}'
 
 - name: set route reflector cluster id
-  set_fact:
+  ansible.builtin.set_fact:
     rr_cluster_id: '{{ keights_system.network.rr_cluster_id | default("10.0.0.1") }}'
   when: "keights_system.network.plugin == 'calico'"
 
 - name: assert that route reflector cluster id is an ipv4 address
-  assert:
+  ansible.builtin.assert:
     that:
       - "'{{ rr_cluster_id }}' | regex_search('([0-9]{1,3}\\.){3}[0-9]{1,3}')"
     msg: '`keights_system.network.rr_cluster_id` must be an ipv4 address'
   when: "keights_system.network.plugin == 'calico'"
 
 - name: set route reflector cluster id
-  set_fact:
+  ansible.builtin.set_fact:
     rr_cluster_id: '{{ keights_system.network.rr_cluster_id | default("42") }}'
   when: "keights_system.network.plugin == 'kube-router'"
 
 - name: assert that route reflector cluster id is an integer
-  assert:
+  ansible.builtin.assert:
     that:
       - 'rr_cluster_id | int'
     msg: '`keights_system.network.rr_cluster_id` must be an integer'
   when: "keights_system.network.plugin == 'kube-router'"
 
 - name: define ssm paths
-  set_fact:
+  ansible.builtin.set_fact:
     ca_cert_ssm_path: '/{{ keights_system.cluster_name }}/cluster/ca.crt'
     client_cert_ssm_path: '/{{ keights_system.cluster_name }}/controller/apiserver-kubelet-client.crt'
     client_key_ssm_path: '/{{ keights_system.cluster_name }}/controller/apiserver-kubelet-client.key'
 
 - name: ensure cache directory
-  file:
+  ansible.builtin.file:
     path: '{{ playbook_dir }}/.cache/keights-system'
     state: directory
   register: cache_dir
 
 - name: retrieve kubernetes certificates from ssm parameter store
-  set_fact:
+  ansible.builtin.set_fact:
     client_cert: '{{ lookup("aws_ssm", client_cert_ssm_path) }}'
     client_key: '{{ lookup("aws_ssm", client_key_ssm_path) }}'
     ca_cert: '{{ lookup("aws_ssm", ca_cert_ssm_path) }}'
   no_log: true
 
 - name: assert that certificates are found
-  assert:
+  ansible.builtin.assert:
     that:
       - "{{ item }} != ''"
   loop:
@@ -62,7 +62,7 @@
   - ca_cert
 
 - name: define kubeconfig
-  set_fact:
+  ansible.builtin.set_fact:
     kubeconfig:
       apiVersion: v1
       kind: Config
@@ -86,7 +86,7 @@
   no_log: true
 
 - name: write kubeconfig file
-  copy:
+  ansible.builtin.copy:
     dest: '{{ cache_dir.path }}/kubeconfig'
     content: '{{ kubeconfig | to_nice_yaml }}'
     mode: 0600
@@ -98,13 +98,13 @@
 # separately here. In older versions, it would apply what it could
 # and then a retry would apply the remaining resources.
 - name: expand calico crd manifest template
-  template:
+  ansible.builtin.template:
     src: templates/manifests/calico-crd.yml.j2
     dest: '{{ cache_dir.path }}/calico-crd.yml'
   when: 'keights_system.network.plugin == "calico"'
 
 - name: apply calico crd manifest
-  k8s:
+  community.kubernetes.k8s:
     # kubeconfig is used instead of other authentication arguments,
     # to ensure an existing ~/.kube/config does not take precedence.
     kubeconfig: '{{ cache_dir.path }}/kubeconfig'
@@ -116,7 +116,7 @@
   when: 'keights_system.network.plugin == "calico"'
 
 - name: expand k8s manifest templates
-  template:
+  ansible.builtin.template:
     src: '{{ item.src }}'
     dest: '{{ item.dest }}'
   loop:
@@ -131,7 +131,7 @@
   register: k8s_manifests
 
 - name: apply k8s manifests
-  k8s:
+  community.kubernetes.k8s:
     kubeconfig: '{{ cache_dir.path }}/kubeconfig'
     src: '{{ item.item.dest }}'
   loop: '{{ k8s_manifests.results }}'
@@ -141,7 +141,7 @@
   delay: 10
 
 - name: wait for network to come up
-  k8s_info:
+  community.kubernetes.k8s_info:
     kubeconfig: '{{ cache_dir.path }}/kubeconfig'
     kind: Pod
     namespace: kube-system
